<resources>
    <string name="app_name">K Meds</string>
    <string name="title_activity_main">MainActivity</string>

    <!--hear you can change currency-->
    <string name="rs">Rs.\u0020</string>
    <string name="discount_rs">Save Discount Rs.\u0020</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--Pic Image-->
    <string name="take_new_photo">Take a new photo</string>
    <string name="select_from_photo">Select from gallery</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_not_match">Conform password not match</string>
    <string name="phone_to_short">This Phone number is too short</string>
    <string name="error_invalid_date">This date is invalid</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="lbl_set_profile_photo">Select Option</string>
    <string name="lbl_take_camera_picture">Take photo</string>
    <string name="lbl_choose_from_gallery">From camera roll</string>

    <string name="search_text">Search</string>
    <string name="upload_your_prescription">Upload your prescription</string>
    <string name="looking_for">What you looking for?</string>
    <string name="suggested">Suggested</string>
    <string name="user_manage">User Manage</string>
    <string name="user_profile">User Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="upload_prescription">View Upload Prescription</string>
    <string name="view_offer">Offers and Discount</string>
    <string name="product">Products</string>
    <string name="prescription">Prescription</string>
    <string name="medical_product">Medical Products</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rating Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="re_order">Reorder</string>
    <string name="add">ADD</string>
    <string name="qty">Qty:\u0020</string>
    <string name="search_prescription">Search prescription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_chk_note">Sign up to recive our special offers,updates and a lot more.</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_note">Forgot your login details? Get help signing in.</string>
    <string name="sinup_note">Don\'t have an account? Sign up.</string>
    <string name="forgot_note_2">Enter the email address that you used to sign up on</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="reg_chk_note">Please Check our policy</string>
    <string name="upload_3_prescription">You can upload a total 3 prescriptions per order.</string>.
    <string name="please_upload_backside">Please upload the back-side of your prescription, if present.</string>
    <string name="details">Details</string>
    <string name="name">Name:\u0020</string>
    <string name="email_address_2">Email Address:\u0020</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="no_address_found">No address found. Please add one.</string>
    <string name="billing_address">Billing Address</string>
    <string name="is_prescription_meant">Is prescription(s) meant for?</string>
    <string name="new_order">New Order</string>
    <string name="confirm">Confirm</string>
    <string name="registration_successfull">Registration successfull</string>
    <string name="available_products">Available Products:\u0020</string>
    <string name="record_not_found">Record Not Found</string>
    <string name="search">Search</string>
    <string name="generic_available">Generic Available</string>
    <string name="generic_not_available">Generic Not Available</string>
    <string name="in_stock">IN STOCK:\u0020</string>
    <string name="update">Update</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="process_to_payment">Process</string>
    <string name="enter_promo_code">Enter Promo/e-Voucher Code</string>
    <string name="apply">Apply</string>
    <string name="order_total">Order Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charges">Shipping Charges?</string>
    <string name="you_saved">You Saved:\u0020</string>
    <string name="discout">\u0020( Discount )</string>
    <string name="price_details">Price Details</string>
    <string name="remove">Remove</string>
    <string name="add_photo">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="profile_pic_updated">Profile Picture Updated Successfully</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="total_items">Total Items</string>
    <string name="view_more">View More</string>
    <string name="view_less">View Less</string>
    <string name="check">Check</string>
    <string name="add_address">Add Address</string>
    <string name="landmark">Landmark</string>
    <string name="full_name">Full Name</string>
    <string name="zip_code">Zip/ Area Code</string>
    <string name="confirm_detail">Confirm Detail</string>
    <string name="edit">EDIT</string>
    <string name="i_agree_to">I agree to the\u0020</string>
    <string name="terms_of_sale"><u>Terms &amp; Conditions.</u></string>
    <string name="delivery_available">Yes! Delivery available to\u0020</string>
    <string name="delivery_charge">Delivery Charges.\u0020</string>
    <string name="added_delivery_ddress">Successfully added Delivery Address.</string>
    <string name="delivery_fullname">Delivery fullname:\u0020</string>
    <string name="delivery_mobilenumber">Delivery mobilenumber:\u0020</string>
    <string name="delivery_city">Delivery city:\u0020</string>
    <string name="delivery_address2">Delivery address:\u0020</string>
    <string name="delivery_landmark">delivery landmark:\u0020</string>
    <string name="address2">Address:\u0020</string>
    <string name="confirm_and_process">Confirm &amp; Process</string>
    <string name="choose_your_delivery_address">Choose your Delivery Address</string>
    <string name="add_new">+ ADD NEW</string>
    <string name="delete">DELETE</string>
    <string name="edit_address">Edit Address</string>
    <string name="order_detail">Order Details</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="paypal">PAYPAL</string>
    <string name="make_payment">Place Enquiry</string>
    <string name="payment">Payment</string>
    <string name="offer">Offers</string>
    <string name="valid">Valid:\u0020</string>
    <string name="code">CODE:\u0020</string>
    <string name="to">\u0020To\u0020</string>
    <string name="description">Description:\u0020</string>
    <string name="text_copied">Text Copied</string>
    <string name="thank_you_order">Thank you for your enquiry.</string>
    <string name="countinue_home">Continue home</string>
    <string name="track_my_order">Track my order</string>
    <string name="date">Date:\u0020</string>
    <string name="time">Time:\u0020</string>
    <string name="items">Items:\u0020</string>
    <string name="order_no">Order No.:\u0020</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="summery">Summery</string>
    <string name="total">Total:\u0020</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="delivery_charge2">Delivery Charges:\u0020</string>
    <string name="payment_type">Payment Type:\u0020</string>
    <string name="qty2">Qty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure!\nyou want to cancel order?</string>
    <string name="prescription_order">Prescription Order:\u0020</string>
    <string name="status">Status:\u0020</string>
    <string name="net_amount">Net Amount</string>
    <string name="offer_code">Offer Code\u0020</string>
    <string name="please_select_delivery_address">Please select delivery address</string>
    <string name="please_agree_with_terms">Please Agree with our terms</string>
    <string name="please_upload_prescription">Please Upload prescription</string>

    <string name="please_enter_valid_voucher_code">Please enter a valid Promotional or Voucher Code.</string>
    <string name="pres">Pres.\u0020</string>
    <string name="notification">Notifications</string>
    <string name="na">NA</string>
    <string name="offer_discount">Offer Discount:\u0020</string>
    <string name="enquiry">Medicine enquiry</string>
    <string name="do_you_need_dosage_label_on_medicine">Do you need dosage label on medicine ?</string>
    <string name="wallet">Wallet</string>
    <string name="privacy_and_terms">Privacy and Terms</string>
    <string name="our_category">Our Category</string>
    <string name="medicine_products">Suggested Medicines</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_member">New Member</string>
    <string name="summary">Summary</string>
    <string name="let_your_friends_fill_your_wallet">Let your friends fill your wallet</string>
    <string name="earn_while_sharing_your_good_experience_with_your_friend_and_family_let_your_friend_fill_their_monthly_medicines_from_your_most_satisfied_online_pharmacy">Earn while sharing your good experience with your friend and family.Let your friend fill their monthly medicines from your most satisfied online pharmacy.</string>
    <string name="_1_share_kmeds_app_with_your_friends_and_family">1) Share KMeds App with your Friends and Family.</string>
    <string name="_2_you_get_rs_200_in_your_wallet_after_your_friend_s_first_successful">2) You get Rs.200 in your wallet after your friend\'s first successful...</string>
    <string name="_3_your_friend_get_rs_200_in_their_wallet">3) Your friend get Rs.200 in their wallet.</string>
    <string name="amount">Amount</string>
    <string name="total_order_items">Total order items</string>
    <string name="dosage_reminder">Dosage Reminder</string>
    <string name="dosage_remider">Dosage Reminder</string>
    <string name="my_referral_code"><i>MY REFERRAL CODE</i></string>
    <string name="referalcode">Referral Code</string>

</resources>
