<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/space_10">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_marginTop="@dimen/space_10"/>

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_library"
        android:layout_marginTop="@dimen/space_10"/>

    <TextView
        android:id="@+id/tv_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/space_10"/>
</LinearLayout>