<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_notification"
        android:actionLayout="@layout/menu_notification_layout"
        android:icon="@drawable/bell"
        android:title="@string/notification"
        app:actionLayout="@layout/menu_notification_layout"
        app:icon="@drawable/bell"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cart"
        android:actionLayout="@layout/menu_cart_layout"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:actionLayout="@layout/menu_cart_layout"
        app:icon="@drawable/cart"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/action_change_password"
        android:icon="@drawable/ic_action_password"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>
